1998-09-12  Laurent Pautet  <pautet@scapin.enst.fr>

        * configure.in, configure: Fix 5712-G01. Specific naming
	of a decalpha platform.
	
1998-09-02  Samuel Tardieu  <sam@inf.enst.fr>

	* MANIFEST: Add missing Examples/Filters/Makefile.am.

1998-09-02  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure.in: To build isthriob, don't compile s-stratt.adb
 	anymore and bind with flag -t to ignore stamp inconsistency.
        Don't care about inlining and stamp inconsistency since this
        executable is supposed to check whether IO are thread blocking or
        not. This should be fast because it is done during configuration.

1998-09-02  Samuel Tardieu  <sam@inf.enst.fr>

	* MANIFEST: Add missing Examples/Filters/Makefile.am.
	Add Garlic/s-ganase.ad[bs] to the distribution.
	Add Garlic/s-gapise.ad[bs] to the distribution.

	* configure.in (ISTHRBIO): Use a reliable method that works with
	GNAT-inlined/GLADE-not-inlined, GNAT-not-inlined/GLADE-inlined,
	both-inlined or both-non-inlined.

1998-09-01  Samuel Tardieu  <sam@inf.enst.fr>

	* MANIFEST: Remove Examples/Filters/localhost as it will not work
	under Windows.

	* configure.in: isthrbio may need s-stratt.{o,ali} in some
	configurations (GNAT compiled without inlining and GLADE compiled
	with inlining).

1998-08-31  Laurent Pautet  <pautet@scapin.enst.fr>

	* NEWS: Update "New ports", "New functionnalities" and "Bug fixes" 
	sections. Remove redundant subsections.

1998-08-06  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure.in, configure: Adopt a solution based on platform
	letters for NT.

1998-08-04  Samuel Tardieu  <sam@inf.enst.fr>

	* NEWS: Document the default optimization for gnatdist, as well as 
	the fact that -n is no longer added onto the command line if
	--with-remsh is used.

	* configure.in: Use $(ADA) and $(GNATMAKE) instead of "gcc" and
	"gnatmake" since the user can have selected different programs.
	Use -O when compiling isthrbio.