@@ -2,12 +2,12 @@
 ## Contributed by Samuel Tardieu <sam@inf.enst.fr>
 
 dnl Usage: AM_PROG_ADA
-dnl Look for an Ada compiler (ADA environment variable, then gcc, then $CC)
+dnl Look for an Ada compiler (ADA environment variable, gnatgcc, gcc, $CC)
 
 AC_DEFUN(AM_PROG_ADA,
 [AC_BEFORE([$0], [AM_TRY_ADA])
 AC_REQUIRE([AC_PROG_CC])
-AC_CHECK_PROG(ADA, gcc, gcc)
+AC_CHECK_PROG(ADA, GNAT, gnatgcc, gcc)
 if test -z "$ADA"; then
   AC_MSG_RESULT([  Tentatively using $CC as an Ada compiler])
   ADA="$CC"
@@ -38,7 +38,7 @@ dnl (especially the standard libraries such as Ada.Text_IO)
 
 AC_DEFUN(AM_PROG_WORKING_ADA,
 [AC_REQUIRE([AM_PROG_ADA])
-AC_MSG_CHECKING([if the$crossflagmsg Ada compiler works])
+AC_MSG_CHECKING([if the Ada compiler works])
 AM_TRY_ADA([check.adb],
 [with Ada.Text_IO;
 procedure Check is
@@ -66,32 +66,3 @@ else
   AC_MSG_ERROR([Please get a version of GNAT no older than [$2 ($1)]
 (it looks like you only have GNAT [$am_gnatls_version ($am_gnatls_date)])])
 fi])
-
-dnl Usage: AM_CROSS_PROG_ADA
-dnl Look for an Ada compiler for the target (same as the host one if host and
-dnl target are equal)
-
-AC_DEFUN(AM_CROSS_PROG_ADA,
-[AC_REQUIRE([AM_PROG_WORKING_ADA])
- if test $host = $target; then
-   ADA_FOR_TARGET=$ADA
-   AC_SUBST(ADA_FOR_TARGET)
- else
-   AC_CHECK_PROGS(ADA_FOR_TARGET, [$target_alias-$ADA $target-$ADA])
- fi
-])
-
-dnl Usage: AM_CROSS_PROG_WORKING_ADA
-dnl Try to use Ada compiler for the target if it is different from the host
-
-AC_DEFUN(AM_CROSS_PROG_WORKING_ADA,
-[AC_REQUIRE([AM_CROSS_PROG_ADA])
- if test $host != $target; then
-   OLDADA=$ADA
-   ADA=$ADA_FOR_TARGET
-   crossflagmsg=" cross"
-   AM_PROG_WORKING_ADA
-   crossflagmsg=""
-   ADA=$OLDADA
- fi
-])
